--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.3.1 - Added royal-title chance
+
+
 1.0.3.0 - Updated VersionFromManifest-file to not get the 'loading is already in progress' error with some mods
 
 
