--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.3.3 - Added weapon and apparel tag-selection
+
+
 1.3.2 - Added weapon and apparel money. Rerwrote the settings gui-logic for more simple future additions
 
 
