--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.3.4 - Added setting for Death Acidifier
+
+
 1.3.3 - Added weapon and apparel tag-selection
 
 
