--- a/Languages/German/Keyed/Mod_Settings.xml
+++ b/Languages/German/Keyed/Mod_Settings.xml
@@ -50,4 +50,6 @@
   <CPS.generationage.tooltip>Das Mindest- und Höchstalter für Bauern, die sich mit</CPS.generationage.tooltip>
   <CPS.deathacidifier>Todessäuerungsmittel</CPS.deathacidifier>
   <CPS.deathacidifier.tooltip>Wenn der Bauer mit einem Todessäuerer spawnen sollte</CPS.deathacidifier.tooltip>
+  <CPS.genderprobabilities>Geschlecht Wahrscheinlichkeit</CPS.genderprobabilities>
+  <CPS.genderprobabilities.tooltip>Die Chance, dass die Spielfigur männlich oder weiblich ist, beträgt bei Vanille 50%/50%. Erzwungene geschlechtliche Spielfiguren setzen diesen Wert außer Kraft. Jeder hier definierte Wert überschreibt jede Wahrscheinlichkeit, die von Humanoid Alien Races definiert wird.</CPS.genderprobabilities.tooltip>
 </LanguageData>
