Fix for mods that add pawnkinds without labels

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.4.4 - Fix for mods that add pawnkinds without labels
+
+
 1.4.3 - Added some null-checks
 
 
