Updated chinese translations by 摄魂狼

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.5.1 - Updated chinese translations by 摄魂狼
+
+
 1.5.0 - Mod updated for 1.5 and passed autotests
 
 
