Mod updated for 1.6 and passed autotests

--- a/Languages/ChineseSimplified/Keyed/Mod_Settings.xml
+++ b/Languages/ChineseSimplified/Keyed/Mod_Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CPS.settings>设置</CPS.settings>
   <CPS.unlimited>无限制</CPS.unlimited>
