--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ChoosePawnSettings
 
+1.6.0 - Mod updated for 1.6 and passed autotests
+
+
 1.5.1 - Updated chinese translations by 摄魂狼
 
 
