--- a/Languages/ChineseTraditional/Keyed/Mod_Settings.xml
+++ b/Languages/ChineseTraditional/Keyed/Mod_Settings.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CPS.settings> 設置</CPS.settings>
   <CPS.unlimited> 無限制</CPS.unlimited>
